frontend/public/styles.css
html {
  font-family: 'Roboto Condensed', sans-serif;
  overflow-y: scroll; 
}
body {
  margin: 0;
  height: 100%;
  /*padding: 0 16px;*/
  background-color:white;
}

.grid-container {
  display: grid;
  grid-template-areas:
    'header'
    'main'
    'footer';
  grid-template-columns: 1fr;
  grid-template-rows: 3rem 1fr 3rem;
  height: 100%;
}

header{
  grid-area: header;
  padding: 1rem;
}

main{
  grid-area: main;
  padding: 2rem;
  min-height: 100vh;
}

footer {
  grid-area: footer;
  position:relative;
  background-color: #FEF7FA ;
  display: flex;
  align-items: center;
  justify-content: center;
  
}

.top{
  margin-top: 2rem;
}

.row{
  display: flex;
  justify-content: center;
  align-items: center;
}

/*header*/
.navbar {
  grid-area: header;
  justify-content: space-between;
  flex-wrap: wrap;
  background-color: white;
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
  width: 100%;
  position: fixed; 
  top: 0px;
}
.navbar-brand {
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: 800;
  font-size: 1.5em;
}

.navbar a{
  color:#ea2c62 ;
  text-decoration: none;
}

.navbar a:hover{
  color: #e97878;
}

.desktop-query {
  position: relative;
}

.desktop-query>input.desktop-searchBar {
  display: inline-block;
  font-size: 1rem;
  height: 1.25rem;
  line-height: 1.5rem;
  color: #696e79;
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
  padding: 0.5rem 0.65rem 0.625rem;
  margin: 0;
  outline: 0;
  border: 1px solid #f5f5f6;
  border-radius: 0 0.25rem 0.25rem 0;
  border-left: 0;
  background: #f5f5f6;
  text-align: start;
}

a.desktop-submit {
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
  display: inline-block;
  height: 1.75rem;
  width: 2.5rem;
  text-align: center;
  padding: 0.5rem 0 0.125rem;
  background: #f5f5f6;
  border: 1px solid #f5f5f6;
  border-right: none;
  border-radius: 0.25rem 0 0 0.25rem;
  position: absolute;
  left: -2.5rem;
}

.navbar .box3{
}

/*product list*/
.carditem {
  background-color: white;
  border: 1px solid #eaeaec;
  width: 13rem;
  height: 21rem;
  float: left;
  margin: 1.5rem;
  margin-bottom: 0.625;
  cursor: pointer;
}

.carditem img{
  width: 100%;
  height: 15rem;
  align-items: center;
  margin-bottom: 0.625rem;
}

.carditem h6{
  margin-bottom: .25rem;
}

.carditem a{
  text-decoration: none;
}

.details{
  margin-left: 0.5rem;
  color: black;
}

.details p{
  margin-bottom: 0.625rem;
  font-size: 13px;
  color: grey;
}

.price{
  margin-bottom: 0.625rem;
}

/*product details*/
.pdetails{
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  padding: 2rem ;
}

.pdetails .box1{
  margin-right: 2rem;
}

.box2 p{
  color: grey;
}

.pdetails img.medium {
  max-width: 25rem;
  width: 100%;
  padding-right: 2rem;
}

/*Register screen*/
.register {
  margin-top: 5rem;
  margin-bottom: 3rem;
  width: 20rem !important;
  display: flex;
  padding: 2rem;
  text-align: center;
  align-items: center;
  justify-content: center;
  border: 1px solid #eaeaec;
}

.register input {
  border: 1px solid rgba(252, 252, 252, 0.4);
  background-color:#f8f1f1 ;
  width: 250px;
  border-radius: 3px;
  padding: 10px 15px;
  margin: 0 auto 10px auto;
  display: block;
  text-align: center;
  font-size: 18px;
  font-weight: 300;
}

.dropdown{
  display: inline-flex;
}

.dropdown p{
  color: black;
}


.application-base {
  background-color: white;
}

.index-PageNotFoundContainer {
  padding-top: 80px;
  padding-bottom: 140px;
}

/*cart screen*/
.cartScreen{
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  align-items: flex-start;
  background-color: white;
  margin-top: 4rem;
}

.container1{
  display: flex;
  flex-direction: column;
  flex-basis: 35rem;
  margin-right: 3rem;
}

.cartItem{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  border: 1px solid #eaeaec;
  margin-bottom: 2rem;
}

.cartItem .img{
  display: flex;
}

.cartItem img{
  max-width: 7rem;
  width: 100%;
  height: 100%;
  margin-right: 1rem;
}

.itemDetails{
  margin-top: 1rem;
  margin-right: 1rem;
}

.itemDetails a{
  text-decoration: none;
  color: black;
  font-size: 13px;
}

.itemPrice{
  margin-right: 1rem;
}

.container2{
  border: 1px solid #eaeaec;
  padding: 1rem;
}

.container2 p{
  color: black;
  font-size: 13px;
}

.cartButton{
  width: 100%;
}

/*Shipping screen*/
.shipping {
  margin: auto;
  margin-top: 1rem;
  max-width: 30rem;
}

.shipping input {
  border: 1px solid #545b6238;
  background-color:white;
  max-width: 30rem;
  width: 100%;
  border-radius: 5px;
  padding: 10px 10px;
  margin: 0 auto 10px auto;
  text-align: left;
  font-size: 13px;
  font-weight: 300;
}

.shipping Button{
  width: 100%;
}

/*Checkout*/

@media(max-width:500px){
  .checkoutSteps{
    margin-top: 2rem;
  }
}
.checkoutSteps > div{
  flex: 1;
  padding: 1rem;
  border-top: 2px #545b6238 solid;
  color: #545b6238;
}

.checkoutSteps > div.active {
  border-top-color: #ea2c62;
  color:#ea2c62;
}


/*Order Summary*/
.placeOrder{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: flex-start;
}

.orderDetails{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  border: 1px solid #eaeaec;
  padding: 0 1rem 1rem 1rem;
}

.orderDetails p{
  margin-bottom: 0;
  font-size: 0.8rem;
  color: black;
}

.summary{
  background-color: white;
  padding-top: 2rem;
}

.summary img{
  max-width: 6rem;
}

.orderAmount{
  display: flex;
  justify-content: space-between;
  min-width: 20rem;
}

footer p{
  margin: 0px;  
}

